# RegionX-Pallets

./: .gitignore  Cargo.toml
artifacts/: metadata.scale
client/consensus/on-demand-aura/: Cargo.toml
client/consensus/on-demand-aura/src/: collator.rs  equivocation_import_queue.rs  import_queue.rs  lib.rs
client/consensus/on-demand-aura/src/collators/: basic.rs  mod.rs
example/: Cargo.toml  Dockerfile  README.md  zombienet.toml
example/config/: frame-weight-template.hbs
example/e2e/: order-placement.ts  package-lock.json  package.json
example/node/: Cargo.toml
example/node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
example/runtime/: Cargo.toml
example/runtime/src/: apis.rs  benchmarks.rs  lib.rs
example/runtime/src/configs/: mod.rs
pallets/on-demand/: Cargo.toml
pallets/on-demand/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/on-demand/: Cargo.toml
primitives/on-demand/src/: lib.rs  well_known_keys.rs
services/on-demand/: Cargo.toml
services/on-demand/src/: chain.rs  config.rs  lib.rs
