[workspace]
resolver = "2"
members = ["pallets/*", "primitives/on-demand", "services/*"]

[workspace.package]
name = "regionx-pallets"
version = "0.1.0"
authors = ["RegionX"]
description = "Pallets facilitating coretime procurement"
license = "GPLv3"
homepage = "https://regionx.tech/"
repository = "https://github.com/RegionX-Labs/RegionX-Pallets"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.85"
serde = { version = "1.0.201", default-features = false }
smallvec = "1.11.0"
futures = "0.3.31"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.11.3", default-features = false }
hex-literal = "0.4.1"
subxt = "0.38.0"

# Substrate

frame = { version = "0.7.0", package = "polkadot-sdk-frame", default-features = false }
frame-benchmarking = { version = "38.0.0", default-features = false }
frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }

sc-transaction-pool-api = { version = "37.0.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus-aura = { version = "0.45.0", default-features = false }
sc-service = { version = "0.46.0", default-features = false }

sp-api = { version = "34.0.0", default-features = false }
sp-application-crypto = { version = "38.0.0" }
sp-consensus-aura = { version = "0.40.0" }
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-runtime = { version = "39.0.1", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-state-machine = { version = "0.43.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-trie = { version = "37.0.0", default-features = false }

pallet-broker = { version = "0.17.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-xcm = { version = "17.0.1", default-features = false }

xcm = { version = "14.2.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "17.0.1", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "17.0.0", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-primitives-core = { version = "0.16.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.18.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.18.0", default-features = false }
cumulus-client-consensus-common = { version = "0.18.0", default-features = false }

# Polkadot
polkadot-primitives = { version = "16.0.0", default-features = false }
polkadot-runtime-parachains = { version = "17.0.1" }

# Local
pallet-order-creator = { path = "./pallets/order-creator" }
pallet-on-demand = { path = "./pallets/on-demand" }
on-demand-primitives = { path = "./primitives/on-demand" }
on-demand-service = { path = "./services/on-demand" }
