[package]
name = "pallet-on-demand"
authors = ["RegionX"]
version = "0.1.0"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Substrate
frame = { workspace = true, default-features = false, features = ["experimental", "runtime"] }

[dev-dependencies]
frame-support = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
serde = { workspace = true }
smallvec = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-core/std",
	"pallet-balances/std",
]
try-runtime = ["frame/try-runtime"]
