[package]
name = "on-demand-primitives"
authors = ["RegionX"]
version = "0.1.0"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

cumulus-primitives-core = { workspace = true, default-features = false }

[dev-dependencies]
serde = { workspace = true }
smallvec = { workspace = true }

[features]
efault = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-api/std",
    "sp-runtime/std",
    "cumulus-primitives-core/std",
]
